--- a/docs/stat563/hw_stat563.Rmd
+++ b/docs/stat563/hw_stat563.Rmd
@@ -804,12 +804,18 @@ $$=E\begin{bmatrix}
   0 & 0 & 0 & \cdots & (X_{n-1}-\mu)(X_n-\mu)
  \end{bmatrix}_{(n-1)\times(n-1)}$$
 
-$$=(n-1)\rho\sigma^2+(n-2)\rho^{2}\sigma^2+\cdots+\rho^{n-1}\sigma^2=\sigma^2\sum_{i=1}^{n-1}(n-i)\rho^{i}=\frac{\rho}{1-\rho}(n-\frac{1-\rho^n}{1-\rho})$$
+$$=(n-1)\rho\sigma^2+(n-2)\rho^{2}\sigma^2+\cdots+\rho^{n-1}\sigma^2=\sigma^2\sum_{i=1}^{n-1}(n-i)\rho^{i}$$
 
 Note: The partial sum of the geometric series is
 $(1.5.4)\qquad \sum_{k=1}^nt^{k-1}=\frac{1-t^n}{1-t},\ t\neq1$
 
-$$=\sum_{i=1}^{n-1}n\rho^{i}-\sum_{i=1}^{n-1}i\rho^{i}=n\frac{1-\rho^{n-1}}{1-\rho}-\sum_{i=1}^{n-1}i\rho^{i}$$
+$$\sum_{k=0}^{n-1}t^{k}=\frac{1-t^{n}}{1-t}$$
+
+$$\sum_{k=0}^{n-1}kt^{k}=\frac{t-nt^{n}+(n-1)t^{n+1}}{(1-t)^2}=\frac{n(-1+t)t^{n}+t(1-t^{n})}{(1-t)^2}$$
+
+$$=\sum_{i=1}^{n-1}n\rho^{i}-\sum_{i=1}^{n-1}i\rho^{i}=n\frac{1-\rho^{n}}{1-\rho}-\frac{n(-1+\rho)\rho^{n}+\rho(1-\rho^{n})}{(1-\rho)^2}=\frac{n\rho(1-\rho)-\rho(1-\rho^{n})}{(1-\rho)^2}=\frac{\rho}{1-\rho}(n-\frac{1-\rho^n}{1-\rho})$$
+
+$$Var[\bar X]=\frac{\sigma^2}{n}+\frac2{n^2}\frac{\rho}{1-\rho}(n-\frac{1-\rho^n}{1-\rho})$$
 
  ---
  
