--- a/docs/usp570/bib_ads.bib
+++ b/docs/usp570/bib_ads.bib
@@ -95,3 +95,10 @@
   journal={SAE International,(J3016)},
   year={2018}
 }
+
+@online{NCSL2019AV,
+  author = {National Conference of State Legislatures},
+  title = {Autonomous Vehicles | Self-Driving Vehicles Enacted Legislation},
+  url = {http://www.ncsl.org/research/transportation/autonomous-vehicles-self-driving-vehicles-enacted-legislation.aspx},
+  urldate = {2019-03-19}
+}
