--- a/docs/stat566/hw_stat566.Rmd
+++ b/docs/stat566/hw_stat566.Rmd
@@ -1198,22 +1198,22 @@ plot(hw5_model)
 
 Consider a 3-stage nested design with A has fixed effect while B and C have random effects.
 
-(a) Write the complete model. Assume the restricted model.
+(a) Write the complete model.
 
 $$y_{ijkl}=\mu+\tau_i+\beta_{j(i)}+\gamma_{k(ij)}+\varepsilon_{(ijk)l}$$
 
-for $i=1,..,a$ is the number of factor A; 
-$j=1,..,b$ is the number offactor B; 
-$k=1,..,c$ is the number of factor C; 
-$l=1,..,n$ is the number of replication; 
+for $i=1,..,a$ is the number of factor A being compared; 
+$j=1,..,b$ is the number offactor B being compared; 
+$k=1,..,c$ is the number of factor C being compared; 
+$l=1,..,n$ is the number of replication for $k^{th}$ level of factor C in $j^{th}$ level of factor B in $i^{th}$ level of factor A; 
 
 $\mu$ is the overall true mean response;
-$\tau_i$ is the fixed effect of $i^{th}$ factor A;
-$\beta_{j(i)}$ is the random effect of $j^{th}$ factor B;
-$\gamma_{k(ij)}$ is the random effect of $k^{th}$ factor C;
+$\tau_i$ is the main fixed effect of $i^{th}$ level of factor A;
+$\beta_{j(i)}$ is the random effect of $j^{th}$ level of factor B nested in $i^{th}$ level of factor A;
+$\gamma_{k(ij)}$ is the random effect of $k^{th}$ level of factor nested in C $j^{th}$ level of factor B in $i^{th}$ level of factor A;
 
-$y_{ijkl}$ is response value for the $l^{th}$ replication when $i^{th}$ factor A, $j^{th}$ factor B, and $k^{th}$  factor C are applied;
-$\varepsilon_{(ijk)l}$ is random error for the $l^{th}$ replication when $i^{th}$ factor A, $j^{th}$ factor B, and $k^{th}$  factor C are applied.
+$y_{ijkl}$ is response value for the $l^{th}$ replication for $k^{th}$ level of factor C in $j^{th}$ level of factor B in $i^{th}$ level of factor A;
+$\varepsilon_{(ijk)l}$ is random error for the $l^{th}$ EU nested in $k^{th}$ level of factor C in $j^{th}$ level of factor B in $i^{th}$ level of factor A.
 
 Assumptions: 
 
@@ -1225,11 +1225,9 @@ $\varepsilon_{(ijk)l}$, $\beta_{j(i)}$, and $\gamma_{k(ij)}$ are independent.
 
 |term | i(f) | j(r) | k(r) | l(r) | df |  SS | EMS | F   |
 | --- |-- |-- | --| -- | --- | --- | --- | --- |
-|A$\tau_{i}$f|0|b|c|n|a-1|$\frac1{bcn}\sum_{i=1}^ay_{i...}^2-\frac{1}{abcn}y_{....}^2$|$bcn\sigma^2_{\tau}+cn\sigma^2_{\beta}+n\sigma^2_{\gamma}+\sigma^2$|$\frac{MS_{A}}{MS_{B(A)}}$|
-|B(A)$\beta_{j(i)}$r|1|1|c|n|a(b-1)|$\frac1{cn}\sum\limits_{i=1}^a\sum\limits_{j=1}^by_{.j..}^2-\frac1{bcn}\sum_{i=1}^ay_{i...}^2$|$cn\sigma^2_{\beta}+n\sigma^2_{\gamma}+\sigma^2$|$\frac{MS_{B(A)}}{MS_{C(AB)}}$|
-|C(B(A))$\gamma_{k(ji)}$r|1|1|1|n|ab(c-1)|$\frac1{n}{\sum\limits_{i=1}^a\sum\limits_{j=1}^b\sum\limits_{k=1}^cy_{ijk.}^2}-\frac1{cn}{\sum\limits_{i=1}^a\sum\limits_{j=1}^by_{.j..}^2}$|$n\sigma^2_{\gamma}+\sigma^2$|$\frac{MS_{C(AB)}}{MS_{E}}$|
+|A$\tau_{i}$f|0|b|c|n|a-1|$\frac1{bcn}\sum_{i=1}^ay_{i...}^2-\frac{1}{abcn}y_{....}^2$|$\frac{bcn\sum_{i=1}^a\tau_i^2}{a-1}+cn\sigma^2_{\beta}+n\sigma^2_{\gamma}+\sigma^2$|$\frac{MS_{A}}{MS_{B(A)}}$|
+|B(A)$\beta_{j(i)}$r|1|1|c|n|a(b-1)|$\frac1{cn}\sum\limits_{i=1}^a\sum\limits_{j=1}^by_{ij..}^2-\frac1{bcn}\sum_{i=1}^ay_{i...}^2$|$cn\sigma^2_{\beta}+n\sigma^2_{\gamma}+\sigma^2$|$\frac{MS_{B(A)}}{MS_{C(A(B))}}$|
+|C(B(A))$\gamma_{k(ji)}$r|1|1|1|n|ab(c-1)|$\frac1{n}{\sum\limits_{i=1}^a\sum\limits_{j=1}^b\sum\limits_{k=1}^cy_{ijk.}^2}-\frac1{cn}{\sum\limits_{i=1}^a\sum\limits_{j=1}^by_{ij..}^2}$|$n\sigma^2_{\gamma}+\sigma^2$|$\frac{MS_{C(A(B))}}{MS_{E}}$|
 |$\varepsilon_{(ijk)l}$|1|1|1|1|abc(n-1)|$\sum\limits_{i=1}^a\sum\limits_{j=1}^b\sum\limits_{k=1}^c\sum\limits_{l=1}^ny_{ijkl}^2-\frac1n\sum\limits_{i=1}^a\sum\limits_{j=1}^b\sum\limits_{k=1}^cy_{ijk.}^2$|$\sigma^2$||
 |Total| | | | |abcn-1|$\sum\limits_{i=1}^a\sum\limits_{j=1}^b\sum\limits_{k=1}^c\sum\limits_{l=1}^ny_{ijkl}^2-\frac{y_{....}^2}{abcn}$|
 
-|$(\tau\beta)_{ij}$|1|1|c|$(a-1)(b-1)$|$\frac1c\sum\limits_{i=1}^a\sum\limits_{j=1}^by_{ij.}^2-\frac1{bc}\sum\limits_{i=1}^ay_{i..}^2-\frac1{ac}\sum\limits_{j=1}^by_{.j.}^2+\frac{1}{abc}y_{...}^2$|$c\sigma^2_{\tau\beta}+\sigma^2$|$\frac{MS_{AB}}{MS_{E}}$|
-|$(\tau\gamma)_{ik}$|1|b|1|$(a-1)(c-1)$|$\frac1b\sum\limits_{i=1}^a\sum\limits_{k=1}^cy_{i.k}^2-\frac1{bc}\sum\limits_{i=1}^ay_{i..}^2-\frac1{ab}\sum\limits_{k=1}^cy_{..k}^2+\frac{1}{abc}y_{...}^2$|$b\sigma^2_{\tau\gamma}+\sigma^2$|$\frac{MS_{AC}}{MS_{E}}$|
