--- a/static/usp570/pm_usp570.Rmd
+++ b/static/usp570/pm_usp570.Rmd
@@ -37,17 +37,14 @@ This memo is one of the series of policy analysis about autonomous vehicles for 
 ADS means "The hardware and software that are collectively capable of performing the entire Dynamic Driving Task (DDT) on a sustained basis, regardless of whether it is limited to a specific ODD; this term is used specifically to describe a level 3, 4, or 5 driving automation system."
 
 
-*Industry*: Since 2009, Google had conducted a series of tests for AVs over 10 million miles on real-world roads in California, Texas, and other states. Waymo, a company founded by Google, hold the only testing permit for driverless testing by California DMV and committed to providing a ride-hailing services in Arizona in 2018. In 2019 Waymo announced their Level 4 AV will be assembled in Detroit. Almost all big automakers such as Ford, General Motors, Volkswagen, etc., are investing heavily in this field.[Fagnant & kockelman, 2015] The leading transportation network companys (TNC) like Uber and Lyft are making up a term of transportation-as-a-service (Taas) to change current travel modes by AVs.
+*Industry*: Since 2009, Google had conducted a series of tests for AVs over 10 million miles on real-world roads in California, Texas, and other states. Waymo, a company founded by Google, hold the only testing permit for driverless testing by California DMV and committed to providing a ride-hailing services in Arizona in 2018. In 2019, Waymo announced their Level 4 AV will be assembled in Detroit. Almost all big automakers such as Ford, General Motors, Volkswagen, etc., are investing heavily in this field.[Fagnant & kockelman, 2015] The leading transportation network companys (TNC) like Uber and Lyft are making up a term of transportation-as-a-service (Taas) to change current travel modes by AVs.
 
 *Academia*: Many scholars start working on the reaserch of AVs with lots of energy. @gandia2019autonomous's reserch found 10580 published papers in this field from 1945 to 2018. Since 2012, the number of articles have an exponential growth with 39% growth rate while 8-9% average growth rate in science. Although a large amount of the research are from the perspective of systems control, computer science, robotics, engineering, there are more and more articls that start to focus on the AVs' impact on transportation and Land use.
 
-*Governavce*: In 2011, the Nevada Department of Motor Vehicles issued a first license to google's experimental AVs. Currently, 22 states have passed legislation related to AV. Governors in 10 states have issued executive orders related to autonomous vehicles. 
-
-On Sep. 12, the National Highway and Transportation Safety Administration (NHTSA) released new federal guidelines for Automated Driving Systems (ADS). A Vision for Safety 2.0, the latest guidance for automated driving systems to industry and the states. The guidance builds on NHTSA’s 2016 guidance.USDOT, 
+*Governavce*: In 2011, the Nevada Department of Motor Vehicles issued a first license to google's experimental AVs. Currently, “33 states have passed legislation related to AV.” “15 states enacted 18 AV related bills.” [@NCSL2019AV]
+In 2016 and 2017 the U.S. Department of Transportation (U.S.DOT) and the National Highway and Transportation Safety Administration (NHTSA) published two federal guidelines for Automated Driving Systems (ADS is the definition by SAE). The latest guidances advocate industry, state and local government to support the AVs' development.
 
 California is playing a leading role in this field. Until January 2019, California DMV has issued AV Testing Permits (with a driver) to 62 companies on public roadways.
-
-http://www.ncsl.org/research/transportation/autonomous-vehicles-self-driving-vehicles-enacted-legislation.aspx
 
 
 What are the crutial effects? What are the crutial response for land use?
@@ -60,7 +57,7 @@ What are the crutial effects? What are the crutial response for land use?
 
  [@milakis2017policy] Many substantial implications of autonomous vehicles are not considered in this memo, such as safety, liability, and etc. [riple effects]. This analysis focus on the impact on land use, wich have short-term and long-term influences. The short-term influences include che change of parking, urban design, affected by travel demand and behavior
  
-Diamond of Assembly by[] and feedback cylce by []
+Diamond of Assembly by[@milakis2017policy] and feedback cylce by [soteropoulos2019impacts]
 
 The long-term influences include the reconstructure of urban forms and spatial distributions.
 
