--- a/static/usp570/pm_usp570.tex
+++ b/static/usp570/pm_usp570.tex
@@ -132,7 +132,7 @@ Automation to Level 4 - High Driving Automation.\footnote{SAE defines
 AVs over 10 million miles on real-world roads in California, Texas, and
 other states. Waymo, a company founded by Google, hold the only testing
 permit for driverless testing by California DMV and committed to
-providing a ride-hailing services in Arizona in 2018. In 2019 Waymo
+providing a ride-hailing services in Arizona in 2018. In 2019, Waymo
 announced their Level 4 AV will be assembled in Detroit. Almost all big
 automakers such as Ford, General Motors, Volkswagen, etc., are investing
 heavily in this field.{[}Fagnant \& kockelman, 2015{]} The leading
@@ -150,21 +150,18 @@ engineering, there are more and more articls that start to focus on the
 AVs' impact on transportation and Land use.
 
 \emph{Governavce}: In 2011, the Nevada Department of Motor Vehicles
-issued a first license to google's experimental AVs. Currently, 22
-states have passed legislation related to AV. Governors in 10 states
-have issued executive orders related to autonomous vehicles.
-
-On Sep.~12, the National Highway and Transportation Safety
-Administration (NHTSA) released new federal guidelines for Automated
-Driving Systems (ADS). A Vision for Safety 2.0, the latest guidance for
-automated driving systems to industry and the states. The guidance
-builds on NHTSA's 2016 guidance.USDOT,
+issued a first license to google's experimental AVs. Currently, ``33
+states have passed legislation related to AV.'' ``15 states enacted 18
+AV related bills.'' (State Legislatures n.d.) In 2016 and 2017 the U.S.
+Department of Transportation (U.S.DOT) and the National Highway and
+Transportation Safety Administration (NHTSA) published two federal
+guidelines for Automated Driving Systems (ADS is the definition by SAE).
+The latest guidances advocate industry, state and local government to
+support the AVs' development.
 
 California is playing a leading role in this field. Until January 2019,
 California DMV has issued AV Testing Permits (with a driver) to 62
 companies on public roadways.
-
-\url{http://www.ncsl.org/research/transportation/autonomous-vehicles-self-driving-vehicles-enacted-legislation.aspx}
 
 What are the crutial effects? What are the crutial response for land
 use?
@@ -185,7 +182,8 @@ impact on land use, wich have short-term and long-term influences. The
 short-term influences include che change of parking, urban design,
 affected by travel demand and behavior
 
-Diamond of Assembly by{[}{]} and feedback cylce by {[}{]}
+Diamond of Assembly by(Milakis, Van Arem, and Van Wee 2017) and feedback
+cylce by {[}soteropoulos2019impacts{]}
 
 The long-term influences include the reconstructure of urban forms and
 spatial distributions.
@@ -332,6 +330,12 @@ Soteropoulos, Aggelos, Martin Berger, and Francesco Ciari. 2019.
 International Review of Modelling Studies.'' \emph{Transport Reviews} 39
 (1). Taylor \& Francis: 29--49.
 \url{https://doi.org/10.1080/01441647.2018.1523253}.
+
+\leavevmode\hypertarget{ref-NCSL2019AV}{}%
+State Legislatures, National Conference of. n.d. ``Autonomous Vehicles
+\textbar{} Self-Driving Vehicles Enacted Legislation.'' Accessed March
+19, 2019.
+\url{http://www.ncsl.org/research/transportation/autonomous-vehicles-self-driving-vehicles-enacted-legislation.aspx}.
 
 
 \end{document}
