--- a/docs/usp570/pm_usp570.tex
+++ b/docs/usp570/pm_usp570.tex
@@ -110,7 +110,7 @@ planning to seize this opportunity and address the challenges.
 AVs.}\label{background-explains-the-current-and-projected-status-of-avs.}}
 
 \emph{Technology}: The history of exploring autonomous vehicles can date
-back to late 1950s ({\textbf{???}}). Since DARPA ran the Grand Challenge
+back to late 1950s (Milakis 2019). Since DARPA ran the Grand Challenge
 in 2004, the autonomous vehicle technologies entered a ``critical
 juncture.'' (Docherty, Marsden, and Anable 2018) In the fields of
 automation control systems, some critical hardwares like processors and
@@ -152,16 +152,22 @@ AVs' impact on transportation and Land use.
 \emph{Governavce}: In 2011, the Nevada Department of Motor Vehicles
 issued a first license to google's experimental AVs. Currently, ``33
 states have passed legislation related to AV.'' ``15 states enacted 18
-AV related bills.'' (State Legislatures n.d.) In 2016 and 2017 the U.S.
+AV related bills.'' (State Legislatures n.d.) From 2016 to 2018 the U.S.
 Department of Transportation (U.S.DOT) and the National Highway and
-Transportation Safety Administration (NHTSA) published two federal
-guidelines for Automated Driving Systems (ADS is the definition by SAE).
-The latest guidances advocate industry, state and local government to
-support the AVs' development.
-
-California is playing a leading role in this field. Until January 2019,
-California DMV has issued AV Testing Permits (with a driver) to 62
-companies on public roadways.
+Transportation Safety Administration (NHTSA) published three federal
+guidences for Automated Driving Systems (ADS is the definition by
+SAE\footnote{SAE defines the concept of AV as ADS-DV (ADS-Dedicated
+  Vehicle), ``A vehicle designed to be operated exclusively by a level 4
+  or level 5 ADS for all trips within its given Operational Design
+  Domain (ODD) limitations.'' ADS means ``The hardware and software that
+  are collectively capable of performing the entire Dynamic Driving Task
+  (DDT) on a sustained basis, regardless of whether it is limited to a
+  specific ODD; this term is used specifically to describe a level 3, 4,
+  or 5 driving automation system.''}). The guidances advocate industry,
+state and local government to support the AVs' development. (Highway and
+Administration n.d.) California is playing a leading role in this field.
+Until January 2019, California DMV has issued AV Testing Permits (with a
+driver) to 62 companies on public roadways.
 
 What are the crutial effects? What are the crutial response for land
 use?
@@ -294,6 +300,11 @@ Hawkins, Jason, and Khandker Nurul Habib. 2019. ``Integrated Models of
 Land Use and Transportation for the Autonomous Vehicle Revolution.''
 \emph{Transport Reviews} 39 (1). Taylor \& Francis: 66--83.
 \url{https://doi.org/10.1080/01441647.2018.1449033}.
+
+\leavevmode\hypertarget{ref-NHTSA2019ADS}{}%
+Highway, National, and Transportation Safety Administration. n.d.
+``Automated Driving Systems.'' Accessed May 27, 2019.
+\url{https://www.nhtsa.gov/vehicle-manufacturers/automated-driving-systems}.
 
 \leavevmode\hypertarget{ref-sae2018taxonomy}{}%
 international, SAE. 2018. ``Taxonomy and Definitions for Terms Related
