--- a/static/usp570/bib_ads.bib
+++ b/static/usp570/bib_ads.bib
@@ -102,3 +102,11 @@
   url = {http://www.ncsl.org/research/transportation/autonomous-vehicles-self-driving-vehicles-enacted-legislation.aspx},
   urldate = {2019-03-19}
 }
+
+@online{NHTSA2019ADS,
+  author = {National Highway and Transportation Safety Administration},
+  title = {Automated Driving Systems},
+  url = {https://www.nhtsa.gov/vehicle-manufacturers/automated-driving-systems},
+  urldate = {2019-05-27}
+}
+
