--- a/docs/usp570/bib_ads.bib
+++ b/docs/usp570/bib_ads.bib
@@ -91,7 +91,7 @@
 
 @article{sae2018taxonomy,
   title={Taxonomy and definitions for terms related to driving automation systems for on-road motor vehicles},
-  author={SAE international},
+  author={SAE-international},
   journal={SAE International,(J3016)},
   year={2018}
 }
@@ -110,3 +110,29 @@
   urldate = {2019-05-27}
 }
 
+@article{wegener2004land,
+  title={Land-use transport interaction: state of the art},
+  author={Wegener, Michael and F{\"u}rst, Franz},
+  journal={Available at SSRN 1434678},
+  year={2004}
+}
+
+@book{levinson2018metropolitan,
+  title={Metropolitan land use and transport: Planning for Place and Plexus},
+  author={Levinson, David M and Krizek, Kevin J},
+  year={2018},
+  publisher={Routledge},
+  doi={10.4324/9781315684482}
+}
+
+@incollection{Muller2017transportation,
+	title = {Transportation and urban form},
+	isbn = {978-1-4625-2967-4},
+	url = {https://books.google.com/books?id=J3GnDQAAQBAJ},
+	booktitle = {The {Geography} of {Urban} {Transportation}, {Fourth} {Edition}},
+	publisher = {Guilford Publications},
+	author = {Muller, Peter O.},
+	editor = {Giuliano, G. and Hanson, S.},
+	pages = {57--85},
+	year = {2017}
+}
