--- a/docs/usp570/pm_usp570.Rmd
+++ b/docs/usp570/pm_usp570.Rmd
@@ -29,11 +29,11 @@ RE: How Bay Area should be planning for autonomous vehicles?
 
 This memo is one of the series of policy analysis about autonomous vehicles for Bay Area. It trys to answer how the autonomous vehicles will affect urban land use, and What the MPO and cities should be planning to seize this opportunity and address the challenges.
 
-# Background: Explains the current and projected status of AVs.
+# Background: the current and projected status of AVs.
 
-*Technology*: The history of exploring autonomous vehicles can date back to late 1950s [@milakis2019long]. Since DARPA ran the Grand Challenge in 2004, the autonomous vehicle technologies entered a "critical juncture." [@docherty2018governance] In the fields of automation control systems, some critical hardwares like processors and sensors are having the ability of undertaking more complex tasks. The improving softwares and algorithm are becoming more fledged. According the definition and taxonomy by [@sae2018taxonomy], the existing technologies are achiving from the Level 3 - Conditional Driving Automation to Level 4 - High Driving Automation. [^1]
+*Technology*: The history of exploring autonomous vehicles can date back to late 1950s [@milakis2019long]. Since DARPA ran the Grand Challenge in 2004, the autonomous vehicle technologies entered a "critical juncture." [@docherty2018governance] In the fields of automation control systems, some critical hardwares like processors and sensors are having the ability of undertaking more complex tasks. The improving softwares and algorithm are becoming more fledged. According the definition and taxonomy by @sae2018taxonomy, the existing technologies are achiving from the Level 3 - Conditional Driving Automation to Level 4 - High Driving Automation. [^AV]
 
-[^1]: SAE defines the concept of AV as ADS-DV (ADS-Dedicated Vehicle), "A vehicle designed to be operated exclusively by a level 4 or level 5 ADS for all trips within its given Operational Design Domain (ODD) limitations." 
+[^AV]: SAE defines the concept of AV as ADS-DV (ADS-Dedicated Vehicle), "A vehicle designed to be operated exclusively by a level 4 or level 5 ADS for all trips within its given Operational Design Domain (ODD) limitations." 
 ADS means "The hardware and software that are collectively capable of performing the entire Dynamic Driving Task (DDT) on a sustained basis, regardless of whether it is limited to a specific ODD; this term is used specifically to describe a level 3, 4, or 5 driving automation system."
 
 
@@ -42,29 +42,29 @@ ADS means "The hardware and software that are collectively capable of performing
 *Academia*: Many scholars start working on the reaserch of AVs with lots of energy. @gandia2019autonomous's reserch found 10580 published papers in this field from 1945 to 2018. Since 2012, the number of articles have an exponential growth with 39% growth rate while 8-9% average growth rate in science. Although a large amount of the research are from the perspective of systems control, computer science, robotics, engineering, there are more and more articls that start to focus on the AVs' impact on transportation and Land use.
 
 *Governavce*: In 2011, the Nevada Department of Motor Vehicles issued a first license to google's experimental AVs. Currently, “33 states have passed legislation related to AV.” “15 states enacted 18 AV related bills.” [@NCSL2019AV]
-From 2016 to 2018 the U.S. Department of Transportation (U.S.DOT) and the National Highway and Transportation Safety Administration (NHTSA) published three federal guidences for Automated Driving Systems (ADS is the definition by SAE[^1]). The guidances advocate industry, state and local government to support the AVs' development. [@NHTSA2019ADS]
+From 2016 to 2018 the U.S. Department of Transportation (U.S.DOT) and the National Highway and Transportation Safety Administration (NHTSA) published three federal guidences for Automated Driving Systems (ADS is the definition by SAE). The guidances advocate industry, state and local government to support the AVs' development. [@NHTSA2019ADS]
 California is playing a leading role in this field. Until January 2019, California DMV has issued AV Testing Permits (with a driver) to 62 companies on public roadways.
 
 
-What are the crutial effects? What are the crutial response for land use?
+# Changes: unveiling the future
 
-# Changes: Discusses how AVs could influence demand for transportation and, in turn land use. For this analysis, use both theory and research.
+There are some indications that a new era might be dawning. We want to knwow how AVs could influence demand for transportation and land use? This memo will focus on the crutial response for land use. The topic of safety, liability, and other issues will discussed in other memos. 
+
+## Framwork
+
+While industry, scholars and governments realized the high impact of AV, some research frameworks also imply it is a highly uncertainly evolution rising up some complex issues such as coupling, resonance, or agitation.
+@milakis2017policy arrange many substantial implications of autonomous vehicles by a structure of [riple effects], whcih reflected a sequantially spreading process. Land use is placed in the second-order that is affected by the factors in the first-order including travel cost, travel time, vehicle use, capacity, trvael modes, and etc. The flaw of this structure is that the ripple effects model emphasizes the diffusion characteristic of the AV technology and cannot describe the feedback effects, the changes of real estate and land use will influence the travel behavior and traffic in the first-order too. The Diamond of Assembly [@levinson2018metropolitan Chapter.12] and the feedback cylce [@wegener2004land; adaped by @soteropoulos2019impacts] are two helpful complements. These figures can present the relationship between transportation and land use in a more clear manner. AV technology as a exogenous variable will influence travel behaviors in the first ripple, and then is reflected in the change of accessiblity.
+
+Theory: 
+
+@Muller2017transportation introduces the four stages in the spatial evolution of the American metropolitan. Form to , the four-stage model shows that each "break through in movement technology" had reshaped the previous dominated urban form and launched a new era with a "distinctive spatial structure". This history tells us, under the assumption of AV being a breakthrough forces, many previous models, methods, and arguments will fail. We have to review the classical theories before getting some quick answers.
+
+*The utility maximization problem*: As the core of consumer theory.
 
 
+Cost-benifit
 
-## focus on relevant changes
-
- [@milakis2017policy] Many substantial implications of autonomous vehicles are not considered in this memo, such as safety, liability, and etc. [riple effects]. This analysis focus on the impact on land use, wich have short-term and long-term influences. The short-term influences include che change of parking, urban design, affected by travel demand and behavior
- 
-Diamond of Assembly by[@milakis2017policy] and feedback cylce by [soteropoulos2019impacts]
-
-The long-term influences include the reconstructure of urban forms and spatial distributions.
-
-## essence
-
-Four stage
-
-Theory: bid-rent theroy, utility maximize.
+bid-rent theroy, 
 
 Research: Identifies the benefits and costs of these possible outcomes.
 
@@ -79,7 +79,25 @@ full ridesharing by realtime matching
 Time cost [@singleton2019discussing]
 
 
+
+## The relevant researches
+
+
+
+the impact on land use, wich have short-term and long-term influences. The short-term influences include che change of parking, urban design, affected by travel demand and behavior
+
+The long-term influences include the reconstructure of urban forms and spatial distributions.
+
+
+
+
+
+
+
+
 ## Methodology
+
+convergent
 
 
 high risk in use sufficient principle, and likelihood principle. another option is convariance principle.
