--- a/static/usp570/pm_usp570.Rmd
+++ b/static/usp570/pm_usp570.Rmd
@@ -59,12 +59,9 @@ Theory:
 
 @Muller2017transportation introduces the four stages in the spatial evolution of the American metropolitan. Form to , the four-stage model shows that each "break through in movement technology" had reshaped the previous dominated urban form and launched a new era with a "distinctive spatial structure". This history tells us, under the assumption of AV being a breakthrough forces, many previous models, methods, and arguments will fail. We have to review the classical theories before getting some quick answers.
 
-*The utility maximization problem*: As the core of consumer theory.
+*The utility maximization problem*: As the core of consumer theory, the supply and demand model explaines the relationship between the price (travel cost) and the quantity (VMT). When price changed or the curve shifted, the market-clearing equilibrium point will reach a new one. In estimating the impact of AV on travel cost and VMT, most of current research based on this theory.[] However, we know this relationship only works in a reasonable range. If the travel cost extend outside the effective range, the previous curve will fail to converge in a new equilibrium point. For example, tend to zero
 
-
-Cost-benifit
-
-bid-rent theroy, 
+*The bid-rent theroy*: this theory derived from supply-demand model and introduced the spatial variables.
 
 Research: Identifies the benefits and costs of these possible outcomes.
 
