--- a/static/usp570/pm_usp570.tex
+++ b/static/usp570/pm_usp570.tex
@@ -205,11 +205,18 @@ breakthrough forces, many previous models, methods, and arguments will
 fail. We have to review the classical theories before getting some quick
 answers.
 
-\emph{The utility maximization problem}: As the core of consumer theory.
+\emph{The utility maximization problem}: As the core of consumer theory,
+the supply and demand model explaines the relationship between the price
+(travel cost) and the quantity (VMT). When price changed or the curve
+shifted, the market-clearing equilibrium point will reach a new one. In
+estimating the impact of AV on travel cost and VMT, most of current
+research based on this theory.{[}{]} However, we know this relationship
+only works in a reasonable range. If the travel cost extend outside the
+effective range, the previous curve will fail to converge in a new
+equilibrium point. For example, tend to zero
 
-Cost-benifit
-
-bid-rent theroy,
+\emph{The bid-rent theroy}: this theory derived from supply-demand model
+and introduced the spatial variables.
 
 Research: Identifies the benefits and costs of these possible outcomes.
 
